[package]
name = "imagescraper-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "imagescraper"
path = "src/main.rs"

[lib]
name = "imagescraper"
path = "src/lib.rs"

[dependencies]
curl = "0.4.44"
env_logger = "0.10.0"
error-chain = "0.12.4"
filenamify = "0.1.0"
handlebars = "4.3.7"
html-escape = "0.2.13"
http = "0.2.9"
inquire = "0.6.2"
log = "0.4.20"
md5 = "0.7.0"
once_cell = "1.18.0"
regex = "1.9.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.17.1"
select = "0.6.0"
serde = "1.0.175"
serde_derive = "1.0.175"
serde_json = "1"
titlecase = "2.2.1"
toml = "0.7.6"
